objects/APTS_Stage_Sub_Items__c.object
<CustomObject>
    <fields>
        <fullName>APTS_Expected_Market_Price__c</fullName>
        <label>Expected Market Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>Legacy Record Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>APTS_Original_Sales_Price__c</fullName>
        <label>Original Sales Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Proposal_Line_Item__c</fullName>
        <label>Proposal Line Item</label>
        <referenceTo>Apttus_Proposal__Proposal_Line_Item__c</referenceTo>
        <relationshipLabel>Stage Sub Items</relationshipLabel>
        <relationshipName>Stage_Sub_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>APTS_Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Sales_Price__c</fullName>
        <label>Sales Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Standard_Discounts__c</fullName>
        <label>Standard Discounts</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Transfer_Price__c</fullName>
        <label>Transfer Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Type__c</fullName>
        <label>Type</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Stage Sub Items</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>APTS_External_ID__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>SSI-{0000000}</displayFormat>
        <label>Stage Sub Items Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stage Sub Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>